--- a/index.html
+++ b/index.html
@@ -9,41 +9,40 @@
     body {
       font-family: 'Lato';
       font-weight: 300;
+      align-items: center;
     }
-    h1, h3 {
+
+    h1,
+    h3 {
       font-weight: 300;
     }
   </style>
 </head>
 
 <body>
-  <table>
-    <tbody>
-      <tr>
-        <td><img src="IMG_0174.jpg" alt="" width="120px"></td>
-        <td><h1>Selman Karaosmanoglu</h1></td>
-      </tr>
-    </tbody>
-  </table>
+  <center>
 
-  <hr>
-  <h3>Web Sites</h3>
-  <ul>
-    <li><b>Fatih Karaosmanoglu</b> - <a href="https://fatihkaraosmanoglu.com">fatihkaraosmanoglu.com</a></li>
-    <li><b>Hasan Herken</b> - <a href="https://hasanherken.com">hasanherken.com</a></li>
-    <li><b>Ayşe Olcay</b> - <a href="https://ayseolcay.com">ayseolcay.com</a></li>
-    <li><b>Nonstop Auto Shop</b> - <a href="https://nonstopautoshop.com">nonstopautoshop.com</a></li>
-    <li><b>Hemi Gıda</b> - <a href="https://hemigida.com">hemigida.com</a></li>
-    <li><b>Soylu Otokar</b> - <a href="https://soyluotokar.com">soyluotokar.com</a></li>
-    <li><b>Juwelier Hanan</b> - <a href="https://juwelierhanan.de">juwelierhanan.de</a></li>
-  </ul>
-  <h3>App</h3>
-  <ul>
-    <li><b>Nonstop Auto</b>  - Published on Apple App Store 2019 - <a href="https://appadvice.com/app/nonstop-auto/1451959967">Nonstop Auto</a></li>
-  </ul>
-  <h3>Contact</h3>
-  <p>selmank@gmail.com</p>
-  <p><a href="https://github.com/fermiyon">https://github.com/fermiyon</a></p>
+    <img src="IMG_0174.jpg" alt="" width="120px"></td>
+    <h1>Selman Karaosmanoglu</h1>
+    <hr>
+    <h3>Web Sites</h3>
+
+    <p><b>Fatih Karaosmanoglu</b> - <a href="https://fatihkaraosmanoglu.com">fatihkaraosmanoglu.com</a></p>
+    <p><b>Hasan Herken</b> - <a href="https://hasanherken.com">hasanherken.com</a></p>
+    <p><b>Ayşe Olcay</b> - <a href="https://ayseolcay.com">ayseolcay.com</a></p>
+    <p><b>Nonstop Auto Shop</b> - <a href="https://nonstopautoshop.com">nonstopautoshop.com</a></p>
+    <p><b>Hemi Gıda</b> - <a href="https://hemigida.com">hemigida.com</a></p>
+    <p><b>Soylu Otokar</b> - <a href="https://soyluotokar.com">soyluotokar.com</a></p>
+    <p><b>Juwelier Hanan</b> - <a href="https://juwelierhanan.de">juwelierhanan.de</a></p>
+
+    <h3>App</h3>
+
+    <p><b>Nonstop Auto</b> - Published on Apple App Store 2019 - <a href="https://appadvice.com/app/nonstop-auto/1451959967">Nonstop Auto</a></p>
+
+    <h3>Contact</h3>
+    <p>selmank@gmail.com</p>
+    <p><a href="https://github.com/fermiyon">https://github.com/fermiyon</a></p>
+  </center>
 </body>
 
 </html>
