--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
     <hr>
     <h3>Web Sites</h3>
 
-    <p><b>Fatih Karaosmanoglu</b> - <a href="https://fatihkaraosmanoglu.com">fatihkaraosmanoglu.com</a></p>
-    <p><b>Hasan Herken</b> - <a href="https://hasanherken.com">hasanherken.com</a></p>
-    <p><b>Ayşe Olcay</b> - <a href="https://ayseolcay.com">ayseolcay.com</a></p>
-    <p><b>Nonstop Auto Shop</b> - <a href="https://nonstopautoshop.com">nonstopautoshop.com</a></p>
-    <p><b>Hemi Gıda</b> - <a href="https://hemigida.com">hemigida.com</a></p>
-    <p><b>Soylu Otokar</b> - <a href="https://soyluotokar.com">soyluotokar.com</a></p>
-    <p><b>Juwelier Hanan</b> - <a href="https://juwelierhanan.de">juwelierhanan.de</a></p>
+    <p>Fatih Karaosmanoglu - <a href="https://fatihkaraosmanoglu.com">fatihkaraosmanoglu.com</a></p>
+    <p>Hasan Herken - <a href="https://hasanherken.com">hasanherken.com</a></p>
+    <p>Ayşe Olcay - <a href="https://ayseolcay.com">ayseolcay.com</a></p>
+    <p>Nonstop Auto Shop - <a href="https://nonstopautoshop.com">nonstopautoshop.com</a></p>
+    <p>Hemi Gıda - <a href="https://hemigida.com">hemigida.com</a></p>
+    <p>Soylu Otokar - <a href="https://soyluotokar.com">soyluotokar.com</a></p>
+    <p>Juwelier Hanan - <a href="https://juwelierhanan.de">juwelierhanan.de</a></p>
 
     <h3>App</h3>
 
-    <p><b>Nonstop Auto</b> - Published on Apple App Store 2019 - <a href="https://appadvice.com/app/nonstop-auto/1451959967">Nonstop Auto</a></p>
+    <p>Nonstop Auto - Published on Apple App Store 2019 - <a href="https://appadvice.com/app/nonstop-auto/1451959967">Nonstop Auto</a></p>
 
     <h3>Contact</h3>
     <p>selmank@gmail.com</p>
