--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Selman Karaosmanoglu</title>
-  <link href='https://fonts.googleapis.com/css?family=Lato:300,700' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Lato:300,500,600,700' rel='stylesheet'>
   <style>
     body {
       font-family: 'Lato';
@@ -12,10 +12,13 @@
       align-items: center;
     }
 
-    h1,
-    h3 {
+    h1 {
       font-weight: 300;
     }
+    h2 {
+      font-weight: 300;
+    }
+
   </style>
 </head>
 
@@ -25,7 +28,7 @@
     <img src="IMG_0174.jpg" alt="" width="120px"></td>
     <h1>Selman Karaosmanoglu</h1>
     <hr>
-    <h3>Web Sites</h3>
+    <h2>Web Sites</h2>
 
     <p>Fatih Karaosmanoglu - <a href="https://fatihkaraosmanoglu.com">fatihkaraosmanoglu.com</a></p>
     <p>Hasan Herken - <a href="https://hasanherken.com">hasanherken.com</a></p>
@@ -35,11 +38,11 @@
     <p>Soylu Otokar - <a href="https://soyluotokar.com">soyluotokar.com</a></p>
     <p>Juwelier Hanan - <a href="https://juwelierhanan.de">juwelierhanan.de</a></p>
 
-    <h3>App</h3>
+    <h2>App</h2>
 
     <p>Nonstop Auto - Published on Apple App Store 2019 - <a href="https://appadvice.com/app/nonstop-auto/1451959967">Nonstop Auto</a></p>
 
-    <h3>Contact</h3>
+    <h2>Contact</h2>
     <p>selmank@gmail.com</p>
     <p><a href="https://github.com/fermiyon">https://github.com/fermiyon</a></p>
   </center>
