--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       font-family: 'Lato';
       font-weight: 300;
       align-items: center;
+      margin-top: 41px;
+      margin-bottom: 41px;
+      margin-left: 0px;
+      margin-right: 0px;
     }
 
     h1 {
@@ -37,11 +41,10 @@
     <p>Hemi Gıda - <a href="https://hemigida.com">hemigida.com</a></p>
     <p>Soylu Otokar - <a href="https://soyluotokar.com">soyluotokar.com</a></p>
     <p>Juwelier Hanan - <a href="https://juwelierhanan.de">juwelierhanan.de</a></p>
-
+    <br>
     <h2>App</h2>
-
     <p>Nonstop Auto - Published on Apple App Store 2019 - <a href="https://appadvice.com/app/nonstop-auto/1451959967">Nonstop Auto</a></p>
-
+    <br>
     <h2>Contact</h2>
     <p>selmank@gmail.com</p>
     <p><a href="https://github.com/fermiyon">https://github.com/fermiyon</a></p>
