--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     h2 {
       font-weight: 300;
     }
+    .foto {
+      border-radius: 11px;
+    }
 
   </style>
 </head>
@@ -29,7 +32,7 @@
 <body>
   <center>
 
-    <img src="IMG_0174.jpg" alt="" width="120px"></td>
+    <img src="IMG_0174.jpg" alt="" width="120px" class="foto"></td>
     <h1>Selman Karaosmanoglu</h1>
     <hr>
     <h2>Web Sites</h2>
