--- a/index.html
+++ b/index.html
@@ -5,28 +5,8 @@
   <meta charset="utf-8">
   <title>Selman Karaosmanoglu</title>
   <link href='https://fonts.googleapis.com/css?family=Lato:300,500,600,700' rel='stylesheet'>
-  <style>
-    body {
-      font-family: 'Lato';
-      font-weight: 300;
-      align-items: center;
-      margin-top: 41px;
-      margin-bottom: 41px;
-      margin-left: 0px;
-      margin-right: 0px;
-    }
-
-    h1 {
-      font-weight: 300;
-    }
-    h2 {
-      font-weight: 300;
-    }
-    .foto {
-      border-radius: 11px;
-    }
-
-  </style>
+  <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet'>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
