--- a/indexv1d.html
+++ b/indexv1d.html
@@ -14,7 +14,7 @@
       margin-bottom: 41px;
       margin-left: 0px;
       margin-right: 0px;
-      
+
     }
 
     h1 {
@@ -40,7 +40,7 @@
 
     <p>Fatih Karaosmanoglu - <a href="https://fatihkaraosmanoglu.com">fatihkaraosmanoglu.com</a></p>
     <p>Hasan Herken - <a href="https://hasanherken.com">hasanherken.com</a></p>
-    <p>Ayşe Olcay - <a href="https://ayseolcay.com">ayseolcay.com</a></p>
+    <p>Ayse Olcay - <a href="https://ayseolcay.com">ayseolcay.com</a></p>
     <p>Nonstop Auto Shop - <a href="https://nonstopautoshop.com">nonstopautoshop.com</a></p>
     <p>Hemi Gıda - <a href="https://hemigida.com">hemigida.com</a></p>
     <p>Soylu Otokar - <a href="https://soyluotokar.com">soyluotokar.com</a></p>
