--- a/index.html
+++ b/index.html
@@ -6,7 +6,52 @@
   <title>Selman Karaosmanoglu</title>
   <link href='https://fonts.googleapis.com/css?family=Lato:300,500,600,700' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet'>
-  <link rel="stylesheet" href="css/styles.css">
+  <style>
+    body {
+      font-family: 'Lato';
+      font-weight: 300;
+      align-items: center;
+      margin-top: 41px;
+      margin-bottom: 41px;
+      margin-left: 0px;
+      margin-right: 0px;
+      background-color: #2DAF94;
+    }
+
+    body,
+    a {
+      color: #C8F6ED;
+    }
+
+    hr {
+      border-color: #3EC8AC;
+      border-width: 3px;
+      border-style: dotted none none none;
+    }
+
+    h1,
+    h2 {
+      color: #40514E
+    }
+
+    p {
+      font-size: 1.1em;
+    }
+
+    h1 {
+      font-family: 'Sacramento', cursive;
+      font-weight: 300;
+      font-size: 5em;
+    }
+
+    h2 {
+      font-weight: 300;
+    }
+
+    .foto {
+      border-radius: 11px;
+    }
+  </style>
 </head>
 
 <body>
@@ -17,13 +62,13 @@
     <hr>
     <h2>Web Sites</h2>
 
-    <p>Fatih Karaosmanoglu - <a href="https://fatihkaraosmanoglu.com">fatihkaraosmanoglu.com</a></p>
-    <p>Hasan Herken - <a href="https://hasanherken.com">hasanherken.com</a></p>
-    <p>Ayse Olcay - <a href="https://ayseolcay.com">ayseolcay.com</a></p>
-    <p>Nonstop Auto Shop - <a href="https://nonstopautoshop.com">nonstopautoshop.com</a></p>
-    <p>Hemi Gıda - <a href="https://hemigida.com">hemigida.com</a></p>
-    <p>Soylu Otokar - <a href="https://soyluotokar.com">soyluotokar.com</a></p>
-    <p>Juwelier Hanan - <a href="https://juwelierhanan.de">juwelierhanan.de</a></p>
+    <p><a href="https://fatihkaraosmanoglu.com">Fatih Karaosmanoglu</a></p>
+    <p><a href="https://hasanherken.com">Hasan Herken</a></p>
+    <p><a href="https://ayseolcay.com">Ayse Olcay</a></p>
+    <p><a href="https://nonstopautoshop.com">Nonstop Auto Shop</a></p>
+    <p><a href="https://hemigida.com">Hemi Gıda</a></p>
+    <p><a href="https://soyluotokar.com">Soylu Otokar</a></p>
+    <p><a href="https://juwelierhanan.de">Juwelier Hanan</a></p>
     <br>
     <h2>App</h2>
     <p>Nonstop Auto - Published on Apple App Store 2019 - <a href="https://appadvice.com/app/nonstop-auto/1451959967">Nonstop Auto</a></p>
