--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
       margin-left: 0px;
       margin-right: 0px;
       background-color: #2DAF94;
+      color: #C8F6ED;
     }
-
-    body,
     a {
       color: #C8F6ED;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
     }
 
     hr {
@@ -71,10 +74,10 @@
     <p><a href="https://juwelierhanan.de">Juwelier Hanan</a></p>
     <br>
     <h2>App</h2>
-    <p>Nonstop Auto - Published on Apple App Store 2019 - <a href="https://appadvice.com/app/nonstop-auto/1451959967">Nonstop Auto</a></p>
+    <p><a href="https://appadvice.com/app/nonstop-auto/1451959967">Nonstop Auto</a> - Published on Apple App Store 2019</p>
     <br>
     <h2>Contact</h2>
-    <p>selmank@gmail.com</p>
+    <p><a href="mailto:selmank@gmail.com">selmank@gmail.com</a></p>
     <p><a href="https://github.com/fermiyon">https://github.com/fermiyon</a></p>
   </center>
 </body>
