--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
     <hr>
     <h2>Web Sites</h2>
 
-    <p><a href="https://fatihkaraosmanoglu.com">Fatih Karaosmanoglu</a></p>
-    <p><a href="https://hasanherken.com">Hasan Herken</a></p>
-    <p><a href="https://ayseolcay.com">Ayse Olcay</a></p>
-    <p><a href="https://nonstopautoshop.com">Nonstop Auto Shop</a></p>
-    <p><a href="https://hemigida.com">Hemi Gıda</a></p>
-    <p><a href="https://soyluotokar.com">Soylu Otokar</a></p>
-    <p><a href="https://juwelierhanan.de">Juwelier Hanan</a></p>
+    <p><a href="https://fatihkaraosmanoglu.com" target="_blank">Fatih Karaosmanoglu</a></p>
+    <p><a href="https://hasanherken.com" target="_blank">Hasan Herken</a></p>
+    <p><a href="https://ayseolcay.com" target="_blank">Ayse Olcay</a></p>
+    <p><a href="https://nonstopautoshop.com" target="_blank">Nonstop Auto Shop</a></p>
+    <p><a href="https://hemigida.com" target="_blank">Hemi Gıda</a></p>
+    <p><a href="https://soyluotokar.com" target="_blank">Soylu Otokar</a></p>
+    <p><a href="https://juwelierhanan.de" target="_blank">Juwelier Hanan</a></p>
     <br>
     <h2>App</h2>
-    <p><a href="https://appadvice.com/app/nonstop-auto/1451959967">Nonstop Auto</a> - Published on Apple App Store 2019</p>
+    <p><a href="https://appadvice.com/app/nonstop-auto/1451959967" target="_blank">Nonstop Auto</a> - Published on Apple App Store 2019</p>
     <br>
     <h2>Contact</h2>
     <p><a href="mailto:selmank@gmail.com">selmank@gmail.com</a></p>
