--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       margin-bottom: 41px;
       margin-left: 0px;
       margin-right: 0px;
-      background-color: #2DAF94;
-      color: #C8F6ED;
+      background-color: #f9f9f9;
+      color: #393E46;
     }
     a {
-      color: #C8F6ED;
+      color: #222831;
       text-decoration: none;
     }
     a:hover {
@@ -27,7 +27,7 @@
     }
 
     hr {
-      border-color: #3EC8AC;
+      border-color: #f2f2f2;
       border-width: 3px;
       border-style: dotted none none none;
     }
@@ -49,12 +49,15 @@
 
     h2 {
       font-weight: 300;
+      font-size: 3em;
     }
 
     .foto {
       border-radius: 11px;
       box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
     }
+
+    
   </style>
 </head>
 
